# enfield

./: CMakeLists.txt  Dockerfile  README.md
ci/xacc/: Dockerfile
executor/: CMakeLists.txt  EnfieldExecutor.cpp  EnfieldExecutor.hpp
include/enfield/Support/: Stats.h
include/enfield/Transform/: Driver.h
lib/Analysis/: CMakeLists.txt
lib/Arch/: CMakeLists.txt
lib/Support/: CMakeLists.txt  Defs.cpp
lib/Transform/: CMakeLists.txt  Driver.cpp
lib/Transform/Allocators/: BoundedMappingTreeQAllocator.cpp  CMakeLists.txt  ChallengeWinnerQAllocator.cpp  IBMQAllocator.cpp  JKUQAllocator.cpp  SabreQAllocator.cpp  StdSolutionQAllocator.cpp
lib/Transform/Allocators/BMT/: CMakeLists.txt
lib/Transform/Allocators/Simple/: CMakeLists.txt  RandomMappingFinder.cpp
xacc/: CMakeLists.txt  EnfieldActivator.cpp  EnfieldPlacement.cpp  EnfieldPlacement.hpp  manifest.json
xacc/tests/: CMakeLists.txt  EnfieldPlacementTester.cpp  qaoa_test.py
xacc/tests/resources/: ipea_3_pi_8.qasm  pea_3_pi_8.qasm
